Ensure both light and dark mode work

--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -106,7 +106,7 @@ img.qr {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
-  filter: drop-shadow(0px 5px 10px rgba(0,0,0,0.75));
+  filter: drop-shadow(2px 10px 10px rgba(0,0,0,0.5));
   border-radius: 5px;
   border: 1px solid #333;
 }
